added some changes

--- a/services/index.html
+++ b/services/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>landing page</title>
+    <title>sofwa</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -53,7 +53,7 @@
         <div class="row align-items-center justify-content-center">
 
           <div class="col-4">
-            <h1 class="m-0 site-logo"><a href="index.html">Services</a></h1>
+            <h1 class="m-0 site-logo"><a href="index.html">sofwa</a></h1>
           </div>
 
           <div class="col-8">
@@ -327,7 +327,7 @@
         <div class="row mb-5">
           <div class="col-md-3">
             <h3 class="footer-title">Services</h3>
-            <p><span class="d-inline-block d-md-block">203 Fake St. Mountain View,</span> San Francisco, California, USA</p>
+            <p><span class="d-inline-block d-md-block">Dr yahaya hamza steet, ung rimi kaduana</p>
           </div>
           <div class="col-md-5 mx-auto">
             <div class="row">
